fix(oui-button-group): fix vertical alignment of oui-button-group

--- a/packages/oui-button-group/_mixins.less
+++ b/packages/oui-button-group/_mixins.less
@@ -10,6 +10,7 @@
     display: inline-flex;
     align-content: stretch;
     align-items: flex-end;
+    vertical-align: top;
     margin: @oui-button-group-spacing;
 
     .@{button-selector} {
